# audiovisual

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindFFTW.cmake
src/: CMakeLists.txt  audiovisual.cpp  audiovisual.hpp  version.hpp.in
src/audiovisual/: CMakeLists.txt  audiovisual.cpp  audiovisual.hpp  status.cpp  status.hpp
src/audiovisual/config/: config.cpp  config.hpp  default.hpp  manager.cpp  manager.hpp
src/audiovisual/windows/: configwindow.cpp  configwindow.hpp  configwindow.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/audioworker/: CMakeLists.txt  worker.cpp  worker.hpp
src/customwidgets/: CMakeLists.txt  utility.cpp  utility.hpp  vumeter.cpp  vumeter.hpp  waterfall.cpp  waterfall.hpp  waterfall_color_table.hpp
src/customwidgets/test/: utilitytest.cpp  utilitytest.hpp  waterfalltest.cpp  waterfalltest.hpp
src/customwidgets/utility/: compute_color_lookup.py
src/dsp/: CMakeLists.txt  dsp.cpp  dsp.hpp
src/dsp/test/: dsptest.cpp  dsptest.hpp
src/fftutility/: CMakeLists.txt  fft1d.cpp  fft1d.hpp
src/fftutility/test/: fft1dtest.cpp  fft1dtest.hpp
src/windows/: configwindow.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
