cmake_minimum_required(VERSION 3.1)
project(audiovisual)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(QT5_PREFIX "$ENV{QTDIR}" CACHE PATH "Qt5 prefix path")
set(FFTW_DIR "$ENV{FFTW_DIR}" CACHE PATH "FFTW prefix path")

find_program(QT5_QMAKE_BIN
        qmake
        PATHS "${QT5_PREFIX}/bin"
        NO_CMAKE_PATH
        NO_CMAKE_ENVIRONMENT_PATH
        NO_SYSTEM_ENVIRONMENT_PATH
        NO_CMAKE_SYSTEM_PATH)

if (NOT QT5_QMAKE_BIN)
    message(FATAL_ERROR "Wrong Qt5 directory: ${QT5_PREFIX}")
endif ()

set(CMAKE_PREFIX_PATH "${QT5_PREFIX}/lib/cmake")

set(AUDIOVISUAL_APPLICATION_NAME "AudioVisual")
set(AUDIOVISUAL_APPLICATION_VERSION_MAJOR "0")
set(AUDIOVISUAL_APPLICATION_VERSION_MINOR "9")
set(AUDIOVISUAL_APPLICATION_VERSION_PATCH "0")

set(AUDIOVISUAL_ORGANIZATION_NAME "The HellNet.org")
set(AUDIOVISUAL_ORGANIZATION_DOMAIN "thehellnet.org")

set(AUDIOVISUAL_APPLICATION_VERSION "${AUDIOVISUAL_APPLICATION_VERSION_MAJOR}.${AUDIOVISUAL_APPLICATION_VERSION_MINOR}.${AUDIOVISUAL_APPLICATION_VERSION_PATCH}")

enable_testing()

add_subdirectory(src)
